fixtures/invalid/23-v0.5-long-rule/input.anatomy
anatomy_version = "0.5"
tagline = "Long architecture rule exceeds maxLength."

[identity]
fingerprint = "a8fybpg4nh2b5vpw498v"

[identity.stack]
id = "rust"
hash = "a8fyb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "web-publishing"
hash = "2b5vp"

[identity.function]
id = "markdown-to-static-html"
hash = "w498v"

[[architecture.invariants]]
rule = "This rule is intentionally far too long and should be rejected by the schema because it exceeds the maximum allowed length of three hundred characters. We are adding more and more text here to ensure that the total character count of this string exceeds the limit that was specified in the v0.5 schema definition for the rule field inside architecture invariants."

[generated]
at = 2026-05-06T12:00:00.000Z
by = "anatomy-cli@0.5.0"
model = "none"
schema = "https://anatomy.dev/spec/0.5/schema.json"
